--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
   name: github
-  repo: thomaswang/gatsby-personal-starter-blog
+  repo: codyarose/codyarose.com
 
 media_folder: content/assets
 public_folder: ../assets
