--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"typography-theme-wordpress-2016": "^0.16.19"
 	},
 	"devDependencies": {
+		"@types/styled-components": "^5.1.3",
 		"gatsby-cli": "^2.12.66",
 		"gatsby-plugin-root-import": "^2.0.5",
 		"prettier": "^1.17.0"
