--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
 	"endOfLine": "lf",
 	"semi": false,
-	"singleQuote": false,
+	"singleQuote": true,
 	"tabWidth": 4,
 	"useTabs": true,
 	"trailingComma": "es5"
