--- a/package.json
+++ b/package.json
@@ -47,6 +47,11 @@
 	},
 	"devDependencies": {
 		"@types/styled-components": "^5.1.3",
+		"@typescript-eslint/eslint-plugin": "^4.1.1",
+		"@typescript-eslint/parser": "^4.1.1",
+		"eslint-config-prettier": "^6.11.0",
+		"eslint-plugin-prettier": "^3.1.4",
+		"eslint-plugin-react": "^7.20.6",
 		"gatsby-cli": "^2.12.66",
 		"gatsby-plugin-root-import": "^2.0.5",
 		"prettier": "^1.17.0"
@@ -67,6 +72,7 @@
 		"format": "prettier --write src/**/*.{js,jsx}",
 		"start": "npm run develop",
 		"serve": "gatsby serve",
-		"test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
+		"test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\"",
+		"lint": "eslint '*/**/*.{ts,tsx}' --quiet --fix"
 	}
 }
