--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
 		"start": "npm run develop",
 		"serve": "gatsby serve",
 		"test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\"",
-		"lint": "eslint '*/**/*.{ts,tsx}' --quiet --fix"
+		"lint": "eslint '*/**/*.{ts,tsx}' --quiet --fix",
+		"type-check": "tsc --noEmit"
 	}
 }
