--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"typography-theme-wordpress-2016": "^0.16.19"
 	},
 	"devDependencies": {
+		"@types/react-helmet": "^6.1.0",
 		"@types/styled-components": "^5.1.3",
 		"@typescript-eslint/eslint-plugin": "^4.1.1",
 		"@typescript-eslint/parser": "^4.1.1",
