--- a/package.json
+++ b/package.json
@@ -42,12 +42,12 @@
 		"styled-components": "^4.2.0",
 		"typeface-merriweather": "0.0.72",
 		"typeface-montserrat": "0.0.54",
-		"typography": "^0.16.19",
-		"typography-theme-wordpress-2016": "^0.16.19"
+		"typography": "^0.16.19"
 	},
 	"devDependencies": {
 		"@types/react-helmet": "^6.1.0",
 		"@types/styled-components": "^5.1.3",
+		"@types/typography": "^0.16.3",
 		"@typescript-eslint/eslint-plugin": "^4.1.1",
 		"@typescript-eslint/parser": "^4.1.1",
 		"eslint-config-prettier": "^6.11.0",
