--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"gatsby-image": "^2.0.39",
 		"gatsby-plugin-feed-mdx": "^1.0.0",
 		"gatsby-plugin-google-analytics": "^2.0.18",
+		"gatsby-plugin-google-fonts-v2": "0.0.6",
 		"gatsby-plugin-local-search": "^1.1.1",
 		"gatsby-plugin-manifest": "^2.0.29",
 		"gatsby-plugin-mdx": "^1.2.14",
@@ -36,6 +37,7 @@
 		"react": "^16.8.6",
 		"react-dom": "^16.8.6",
 		"react-helmet": "^5.2.0",
+		"react-icons": "^3.11.0",
 		"react-switch": "^5.0.0",
 		"react-typography": "^0.16.19",
 		"react-use-flexsearch": "^0.1.1",
