--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"gatsby-remark-smartypants": "^2.0.9",
 		"gatsby-remark-vscode": "^2.1.2",
 		"gatsby-source-filesystem": "^2.0.29",
+		"gatsby-transformer-json": "^2.4.12",
 		"gatsby-transformer-sharp": "^2.1.18",
 		"netlify-cms-app": "^2.9.1",
 		"query-string": "^6.13.1",
