--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"react-dom": "^16.8.6",
 		"react-helmet": "^5.2.0",
 		"react-icons": "^3.11.0",
+		"react-responsive": "^8.1.0",
 		"react-switch": "^5.0.0",
 		"react-typography": "^0.16.19",
 		"react-use-flexsearch": "^0.1.1",
@@ -46,6 +47,7 @@
 	},
 	"devDependencies": {
 		"@types/react-helmet": "^6.1.0",
+		"@types/react-responsive": "^8.0.2",
 		"@types/styled-components": "^5.1.3",
 		"@types/typography": "^0.16.3",
 		"@typescript-eslint/eslint-plugin": "^4.1.1",
