--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,18 +1,19 @@
 backend:
-  name: github
-  repo: codyarose/codyarose.com
+    name: github
+    repo: codyarose/codyarose.com
 
 media_folder: content/assets
 public_folder: ../assets
 
 collections:
-  - name: blog
-    label: Blog
-    folder: content/blog
-    create: true
-    fields:
-      - { name: path, label: Path }
-      - { name: date, label: Date, widget: date }
-      - { name: title, label: Title }
-      - { name: description, label: Description }
-      - { name: body, label: Body, widget: markdown }
+    - name: blog
+      label: Blog
+      folder: content/blog
+      create: true
+      fields:
+          - { name: path, label: Path }
+          - { name: date, label: Date, widget: date }
+          - { name: title, label: Title }
+          - { name: description, label: Description }
+          - { name: featuredImage, label: Featured Image, widget: image }
+          - { name: body, label: Body, widget: markdown }
