--- a/package.json
+++ b/package.json
@@ -26,13 +26,14 @@
 		"gatsby-plugin-typography": "^2.2.13",
 		"gatsby-remark-copy-linked-files": "^2.0.11",
 		"gatsby-remark-images": "^3.3.9",
+		"gatsby-remark-prismjs": "^3.5.14",
 		"gatsby-remark-responsive-iframe": "^2.1.1",
 		"gatsby-remark-smartypants": "^2.0.9",
-		"gatsby-remark-vscode": "^2.1.2",
 		"gatsby-source-filesystem": "^2.0.29",
 		"gatsby-transformer-json": "^2.4.12",
 		"gatsby-transformer-sharp": "^2.1.18",
 		"netlify-cms-app": "^2.9.1",
+		"prismjs": "^1.21.0",
 		"query-string": "^6.13.1",
 		"react": "^16.8.6",
 		"react-dom": "^16.8.6",
