--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"gatsby-plugin-netlify-cms": "^4.3.7",
 		"gatsby-plugin-offline": "^3.2.23",
 		"gatsby-plugin-react-helmet": "^3.0.12",
+		"gatsby-plugin-react-svg": "^3.0.0",
 		"gatsby-plugin-sharp": "^2.0.35",
 		"gatsby-plugin-styled-components": "^3.0.7",
 		"gatsby-plugin-typography": "^2.2.13",
